fixed image width on iOS devices

--- a/style.scss
+++ b/style.scss
@@ -61,7 +61,7 @@ a[target="_blank"]:after {
 }
 
 #map > img {
-	width: 100%;
+	width: 95%;
 	border-radius: 15px;
 	margin-bottom: 30px;
 }
